# Image-Insight

./: .gitignore  AGENTS.md  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
app/: database.py  main.py  models.py
docs/: packaging-plan.md  progress.md
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
tests/: test_api.py
